# wav-player

./: CMakeLists.txt  README.md
inc/: utils.h  wav.h
src/: CMakeLists.txt  main.c  utils.c  wav.c
